Criando relacionamento entre alunos e turmas

--- a/app/assets/stylesheets/pius.scss
+++ b/app/assets/stylesheets/pius.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Pius controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.pius-perfil-img {
+  width: 50px;
+}
+
+.img-size-limit {
+  max-width: 688px;
+}
