--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -1,33 +1,36 @@
-<p id="notice"><%= notice %></p>
+<% if @parties.present? %>
+  <h1>Parties</h1>
 
-<h1>Parties</h1>
-
-<table class="table table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th>Name</th>
-      <th>Begin</th>
-      <th>End</th>
-      <th>Hours</th>
-      <th class="text-center" colspan="3">Menu</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @parties.each do |party| %>
+  <table class="table table-hover">
+    <thead class="thead-dark">
       <tr>
-        <td><%= party.name %></td>
-        <td><%= party.begin %></td>
-        <td><%= party.end %></td>
-        <td><%= party.hours %></td>
-        <td><%= link_to 'Show', party, class: "btn btn-info" %></td>
-        <td><%= link_to 'Edit', edit_party_path(party), class: "btn btn-light" %></td>
-        <td><%= link_to 'Destroy', party, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        <th>Name</th>
+        <th>Begin</th>
+        <th>End</th>
+        <th>Hours</th>
+        <th class="text-center" colspan="3">Menu</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @parties.each do |party| %>
+        <tr>
+          <td><%= party.name %></td>
+          <td><%= party.begin %></td>
+          <td><%= party.end %></td>
+          <td><%= party.hours %></td>
+          <td><%= link_to 'Show', party, class: "btn btn-info" %></td>
+          <td><%= link_to 'Edit', edit_party_path(party), class: "btn btn-light" %></td>
+          <td><%= link_to 'Destroy', party, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Party', new_party_path, class: "btn btn-primary" %>
+<% else %>
+  <div class="alert alert-danger mt-5" role="alert">
+    <h1>Nenhuma turma cadastrada</h1>
+  </div>
+<% end %>
+
+<%= link_to 'New Party', new_party_path, class: "btn btn-primary mt-3" %>
