--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  */
- @import "bootstrap";
- @import "pages";
+
+@import "bootstrap";
+@import "pages";
+@import "pius";
 
