--- a/app/views/parties/_form.html.erb
+++ b/app/views/parties/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.text_field :hours %>
   </div>
 
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
