--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -1,24 +1,20 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @party.name %>
-</p>
-
-<p>
-  <strong>Begin:</strong>
-  <%= @party.begin %>
-</p>
-
-<p>
-  <strong>End:</strong>
-  <%= @party.end %>
-</p>
-
-<p>
-  <strong>Hours:</strong>
-  <%= @party.hours %>
-</p>
-
+<div class="row mt-5">
+  <div class="col-4">
+    <div class="card" style="width: 18rem;">
+      <%= image_tag @party.image.url, class: "card-img-top" %>
+      <div class="card-body">
+        <h5 class="card-title"><%= @party.name %></h5>
+        <h6 class="card-subtitle mb-2 text-muted"><%= @party.begin.strftime("%d/%m/%Y") %> ~ <%= @party.end.strftime("%d/%m/%Y") %></h6>
+        <h6 class="card-subtitle mb-2 text-muted">Duração: <%= @party.hours %> horas</h6>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+    ALUNOS
+  </div>
+</div>
+<br><br>
 <%= link_to 'Edit', edit_party_path(@party) %> |
 <%= link_to 'Back', parties_path %>
