--- a/app/views/pius/show.html.erb
+++ b/app/views/pius/show.html.erb
@@ -1,12 +1,14 @@
-<div class="row mt-5">
-  <div class="col-4 d-flex justify-content-center">
+<div class="row mt-5 mb-5">
+  <div class="col-4 col-auto">
     <div class="card" style="width: 18rem;">
-      <img src="https://trecobox.com.br/wp-content/uploads/2019/09/ergo-proxy-anime-disponivel-na-netflix_trecobox.jpg" class="card-img-top" alt="...">
+      <% url = Gravatar.new(current_user.email).image_url %>
+      <%= image_tag url, class: "card-img-top" %>
       <div class="card-body">
-        <h5 class="card-title">User Name</h5>
-        <p class="card-text"><%= current_user.email %></p>
+        <h5 class="card-title"><%= current_user.name %></h5>
+        <p class="card-subtitle text-muted">@<%= current_user.username %></p>
+        <p class="card-subtitle text-muted mb-4"><%= current_user.email %></p>
         <p class="card-text">I haven't felt much of anything since my guinea pig died.</p>
-        <a href="#" class="btn btn-primary">Perfil</a>
+        <%= link_to "Editar perfil", edit_user_registration_path, class: "btn btn-primary" %>
       </div>
     </div>
   </div>
@@ -14,8 +16,17 @@
     <h1>Piu</h1>
     <div class="card mt-2">
       <div class="card-body">
-        <h5 class="card-title"><%= @piu.user.email %></h5>
+        <div class="row ml-1">
+          <% perfil = Gravatar.new(@piu.user.email).image_url %>
+          <%= image_tag perfil, class: "rounded-circle pius-perfil-img" %>
+          <h5 class="card-title pt-2 ml-3">
+            <%= @piu.user.name %><small> - @<%= @piu.user.username %></small>
+          </h5>
+        </div>
         <p class="card-text"><%= @piu.content %></p>
+        <% if @piu.photo.file? %>
+          <%= image_tag @piu.photo.url, class: "rounded-lg mb-3 img-size-limit" %>
+        <% end %>
         <div class="row">
           <div class="col">
             <% if @piu.user == current_user %>
